# carbu-data

./: .gitignore  main.py  pyproject.toml
.github/workflows/: build_dashboard.yml  refresh_data.yml  scheduled_refresh.yml
dashboard/: evidence.config.yaml  package.json
dashboard/.evidence/customization/: .profile.json
dashboard/pages/: index.md
dashboard/sources/data/: avg_prix.sql  communes.sql  connection.yaml  prix_jour.sql  stations.sql  stocks.sql
pipelines/: helpers.py  pp_r2_communes.py  pp_r2_compact_prices.py  pp_r2_daily_prices.py  pp_r2_infos_stations.py  pp_r2_stocks_data.py  pp_run.py
