[project]
name = "carbu-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlt[duckdb]>=1.25.0",
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "polars>=1.39.3",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.2",
    "requests>=2.33.1",
    "s3fs>=2026.3.0",
    "tqdm>=4.67.3",
    "yfinance>=1.3.0",
]
